@@ -9,6 +9,8 @@
 ==== New classes ====
 
 ==== API changes ====
+  * Removed deprecated SLSQP, LBFGS and NelderMead classes
+  * Removed deprecated QuadraticCumul class
 
 === Python module ===
 
